vote_list / Fix broken wrapping

--- a/frontend/styles/common.styl
+++ b/frontend/styles/common.styl
@@ -466,6 +466,7 @@
 
 .vote-list-wrapper
   max-height 340px
+  display inline-block
 
 .vote-list
   display table
